@@ -1,4 +1,5 @@
 0.0.10
+Added: Blaze/End rods are now tool rods
 Added: Spoon upgrade, allows pickaxes to work as shovels
 Added: Red card upgrade, allows items to break permanently (could be useful in machines that use tools...)
 Added: Root advancement gives players some blueprints
